--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,9 @@ html {
 body {
   font-family: Arial, sans-serif;
   font-size: 1.6rem;
-  line-height: 1.5; }
+  line-height: 1.5;
+  background-image: url("/images/nice_snow.png");
+  background-repeat: repeat; }
 
 h1 {
   margin: 0; }
@@ -34,15 +36,31 @@ button {
 ::-webkit-scrollbar-thumb:hover {
   background: black; }
 
+.app {
+  margin-top: 4rem; }
+  .app__icon {
+    margin-right: .7rem;
+    font-size: 5rem; }
+  .app__title {
+    text-transform: uppercase;
+    font-size: 5rem; }
+
+.titleContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #145F84;
+  -webkit-text-stroke: 2px black; }
+
 .resortContainer {
-  background-color: #2a5694;
+  background-color: #145F84;
   padding: 2.5rem;
   height: 100%;
-  flex: 1; }
+  flex: 1.3; }
   .resortContainer__scroller {
     margin: 0 auto;
     height: 100%;
-    width: 400px;
+    width: 100%;
     overflow: auto; }
     .resortContainer__scroller ul {
       margin: 0;
@@ -55,10 +73,14 @@ button {
       font-weight: bold;
       font-size: 2rem;
       color: #000; }
+      .resortContainer__scroller a:hover {
+        color: #42B8C1; }
+  .resortContainer .resort-icon {
+    color: #42B8C1; }
 
 .statusContainer {
   padding: 2.5rem 3rem;
-  background-color: #eee;
+  background-color: #f3f3f3;
   width: 700px;
   height: 100%;
   flex: 2; }
@@ -71,6 +93,6 @@ button {
   border: 2px solid #333;
   display: flex; }
 
-.title {
+.footer {
   text-align: center;
-  text-transform: uppercase; }
+  font-size: 1rem; }
