--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,6 +12,9 @@ body {
     font-family: Arial, sans-serif;
     font-size: $m-size;
     line-height: 1.5;
+    background-image: url('/images/nice_snow.png');
+    background-repeat: repeat;
+    
 }
 
 h1 {
