Added Footer component and weather styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,6 @@
-@import './base/settings';
-@import './base/base';
-@import './base/variables';
-@import './components/sections'; 
+@import 'base/variables';
+@import 'base/settings';
+@import 'base/base';
+
+@import 'components/sections'; 
+@import 'components/weather';
