--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,10 @@ body {
   background-repeat: repeat; }
 
 h1 {
-  margin: 0; }
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 4rem;
+  color: #145F84; }
 
 button {
   cursor: pointer; }
@@ -26,21 +29,22 @@ button {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #ffffff1a; }
+  background: rgba(66, 184, 193, 0.2); }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.863); }
+  background: rgba(66, 184, 193, 0.5); }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: black; }
+  background: rgba(66, 184, 193, 0.8); }
 
 .app {
   margin-top: 4rem; }
   .app__icon {
     margin-right: .7rem;
-    font-size: 5rem; }
+    font-size: 5rem;
+    color: #145F84; }
   .app__title {
     text-transform: uppercase;
     font-size: 5rem; }
@@ -49,8 +53,15 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #145F84;
   -webkit-text-stroke: 2px black; }
+
+.container {
+  max-width: 1300px;
+  margin: 1rem auto;
+  height: 700px;
+  box-shadow: 5px 5px 50px #c9c9c9;
+  border: 2px solid #333;
+  display: flex; }
 
 .resortContainer {
   background-color: #145F84;
@@ -85,14 +96,46 @@ button {
   height: 100%;
   flex: 2; }
 
-.container {
-  max-width: 1300px;
-  margin: 1rem auto;
-  height: 700px;
-  box-shadow: 5px 5px 50px #c9c9c9;
-  border: 2px solid #333;
-  display: flex; }
-
 .footer {
   text-align: center;
   font-size: 1rem; }
+
+.weatherContainer {
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column; }
+
+.elevation {
+  font-size: 1.3rem;
+  font-weight: bold; }
+
+.weather {
+  flex: 1;
+  background-color: #ebebeb;
+  height: 100%;
+  padding: 1.5rem 2rem;
+  border-radius: 5px; }
+  .weather strong {
+    color: #0D9491; }
+  .weather__category-title {
+    color: #0D9491; }
+  .weather__tempContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0D9491; }
+  .weather__temp {
+    font-size: 5rem;
+    margin-right: 1rem; }
+  .weather__table {
+    width: 100%;
+    margin: 0 auto; }
+    .weather__table th {
+      padding: 0 1rem;
+      text-align: right;
+      width: 55%; }
+    .weather__table tr {
+      padding: 0 1rem;
+      text-align: left;
+      width: 45%; }
