--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,6 +19,9 @@ body {
 
 h1 {
     margin: 0;
+    text-transform: uppercase;
+    font-size: 4rem;
+    color: $color-a;
 }
 
 button {
@@ -35,15 +38,15 @@ button {
   
 /* Track */
 ::-webkit-scrollbar-track {
-background: #ffffff1a; 
+background: rgba($color-c, .2); 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-background: rgba(0, 0, 0, 0.863); 
+background: rgba($color-c, .5);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-background: rgb(0, 0, 0); 
+background: rgba($color-c, .8); 
 }
