--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -72,7 +72,7 @@
 }
 
 .statusContainer {
-    padding: 2.5rem 3rem;
+    padding: 0 3rem 2.5rem ;
     background-color: rgb(243, 243, 243);
     width: 700px;
     height: 100%;
