--- a/src/styles/components/_weather.scss
+++ b/src/styles/components/_weather.scss
@@ -34,16 +34,8 @@
         font-size: 1rem;
     }
 
-    &__tempContainer {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: $color-b;
-    }
-
     &__temp {
         font-size: 5rem;
-        margin-right: 1rem;
     }
 
     &__table {
@@ -53,13 +45,14 @@
         th {
             padding: 0 1rem;
             text-align: right;
-            width: 55%;
+            width: 50%;
+            font-weight: 500;
         }
 
         tr {
             padding: 0 1rem;
             text-align: left;
-            width: 45%;
+            width: 50%;
         }
     }
 
