--- a/public/styles.css
+++ b/public/styles.css
@@ -1,170 +1,2 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  font-family: Arial, sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.5;
-  background-image: url("/images/nice_snow.png");
-  background-repeat: repeat; }
-
-h1 {
-  margin: 0;
-  text-transform: uppercase;
-  font-size: 4rem;
-  color: #145F84; }
-
-h2 {
-  font-size: 3rem; }
-
-button {
-  cursor: pointer; }
-  button:disabled {
-    cursor: default; }
-
-::-webkit-scrollbar {
-  width: 10px; }
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: rgba(66, 184, 193, 0.2); }
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgba(66, 184, 193, 0.5); }
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(66, 184, 193, 0.8); }
-
-.app {
-  margin-top: 4rem; }
-  .app__icon {
-    margin-right: .7rem;
-    font-size: 5rem;
-    color: #145F84; }
-  .app__title {
-    text-transform: uppercase;
-    font-size: 5rem; }
-
-.titleContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-text-stroke: 2px black; }
-
-.container {
-  max-width: 1300px;
-  margin: 1rem auto;
-  height: 700px;
-  box-shadow: 5px 5px 50px #c9c9c9;
-  border: 2px solid #333;
-  display: flex; }
-
-.resortContainer {
-  background-color: #145F84;
-  padding: 2.5rem;
-  height: 100%;
-  flex: 1.3; }
-  .resortContainer__scroller {
-    margin: 0 auto;
-    height: 100%;
-    width: 100%;
-    overflow: auto; }
-    .resortContainer__scroller ul {
-      margin: 0;
-      padding: 0; }
-    .resortContainer__scroller li {
-      list-style: none; }
-    .resortContainer__scroller a {
-      text-decoration: none;
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 2rem;
-      color: #000; }
-      .resortContainer__scroller a:hover {
-        color: #42B8C1; }
-  .resortContainer .resort-icon {
-    color: #42B8C1; }
-
-.statusContainer {
-  padding: 0 3rem 2.5rem;
-  background-color: #f3f3f3;
-  width: 700px;
-  height: 100%;
-  flex: 2; }
-
-.footer {
-  text-align: center;
-  font-size: 1rem; }
-
-.weatherContainer {
-  height: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column; }
-
-.elevation {
-  font-size: 1.3rem;
-  font-weight: bold; }
-
-.weather {
-  position: relative;
-  flex: 1;
-  background-color: #ebebeb;
-  height: 100%;
-  padding: 1.5rem 2rem;
-  border-radius: 5px;
-  overflow: auto; }
-  .weather hr {
-    margin: 1rem 0; }
-  .weather strong {
-    color: #0D9491; }
-  .weather__lastUpdated {
-    position: absolute;
-    top: .5rem;
-    right: .5rem;
-    font-size: 1rem; }
-  .weather__temp {
-    font-size: 5rem; }
-  .weather__table {
-    width: 100%;
-    margin: 0 auto; }
-    .weather__table th {
-      padding: 0 1rem;
-      text-align: right;
-      width: 50%;
-      font-weight: 500; }
-    .weather__table tr {
-      padding: 0 1rem;
-      text-align: left;
-      width: 50%; }
-
-.forecast__dayContainer {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-between; }
-
-.forecast__day {
-  border: 1px solid #0D9491;
-  border-radius: 5px;
-  width: 30%; }
-  .forecast__day h2 {
-    border-bottom: 1px solid #0D9491;
-    background: #0D9491;
-    color: #fff; }
-  .forecast__day__body {
-    padding: .5rem; }
-
-.forecast .tempContainer {
-  display: flex;
-  justify-content: space-around; }
-
-.forecast .tempFlex {
-  display: flex;
-  flex-direction: column; }
+/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit;font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}[hidden],template{display:none}*{box-sizing:border-box;margin:0;padding:0}html{font-size:62.5%}body{font-family:Arial,sans-serif;font-size:1.6rem;line-height:1.5;background-image:url("/images/nice_snow.png");background-repeat:repeat}h1{margin:0;text-transform:uppercase;font-size:4rem;color:#145f84}h2{font-size:3rem}button{cursor:pointer}button:disabled{cursor:default}::-webkit-scrollbar{width:10px}::-webkit-scrollbar-track{background:rgba(66,184,193,.2)}::-webkit-scrollbar-thumb{background:rgba(66,184,193,.5)}::-webkit-scrollbar-thumb:hover{background:rgba(66,184,193,.8)}.app{margin-top:4rem}.app__icon{margin-right:.7rem;font-size:5rem;color:#145f84}.app__title{text-transform:uppercase;font-size:5rem}.titleContainer{display:flex;justify-content:center;align-items:center;-webkit-text-stroke:2px #000}.container{max-width:1300px;margin:1rem auto;height:700px;box-shadow:5px 5px 50px #c9c9c9;border:2px solid #333;display:flex}.resortContainer{background-color:#145f84;padding:2.5rem;height:100%;flex:1.3}.resortContainer__scroller{margin:0 auto;height:100%;width:100%;overflow:auto}.resortContainer__scroller ul{margin:0;padding:0}.resortContainer__scroller li{list-style:none}.resortContainer__scroller a{text-decoration:none;text-transform:uppercase;font-weight:700;font-size:2rem;color:#000}.resortContainer .resort-icon,.resortContainer__scroller a:hover{color:#42b8c1}.statusContainer{padding:0 3rem 2.5rem;background-color:#f3f3f3;width:700px;height:100%;flex:2}.footer{text-align:center;font-size:1rem}.weatherContainer{height:100%;text-align:center;display:flex;flex-direction:column}.elevation{font-size:1.3rem;font-weight:700}.weather{position:relative;flex:1;background-color:#ebebeb;height:100%;padding:1.5rem 2rem;border-radius:5px;overflow:auto}.weather hr{margin:1rem 0}.weather strong{color:#0d9491}.weather__lastUpdated{position:absolute;top:.5rem;right:.5rem;font-size:1rem}.weather__temp{font-size:5rem}.weather__table{width:100%;margin:0 auto}.weather__table th{padding:0 1rem;text-align:right;width:50%;font-weight:500}.weather__table tr{padding:0 1rem;text-align:left;width:50%}.forecast__dayContainer{margin-top:1rem;display:flex;justify-content:space-between}.forecast__day{border:1px solid #0d9491;border-radius:5px;width:30%}.forecast__day h2{border-bottom:1px solid #0d9491;background:#0d9491;color:#fff}.forecast__day__body{padding:.5rem}.forecast .tempContainer{display:flex;justify-content:space-around}.forecast .tempFlex{display:flex;flex-direction:column}
+/*# sourceMappingURL=styles.css.map*/
