--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -1,3 +1,4 @@
+//Contains app title + interface
 .app {
     margin-top: 4rem;
 
@@ -20,6 +21,7 @@
     -webkit-text-stroke: 2px black;
 }
 
+//Contains the app interface
 .container {
     max-width: 1300px;
     margin: 1rem auto;
@@ -29,48 +31,16 @@
     display: flex;
 }
 
+//Resort list
 .resortContainer {
     background-color: $color-a;
     padding: 2.5rem;
-    height: 100%;
     flex: 1.3;
-
-
-    &__scroller {
-        margin: 0 auto;
         height: 100%;
-        width: 100%;
-        overflow: auto;
-
-        ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        li {
-            list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 2rem;
-            color: #000;
-
-            &:hover {
-                color: $color-c;
-            }
-        }
-    }
-
-    .resort-icon {
-        color: $color-c;
-    }
-    
-
+        text-align: left;
 }
 
+//Weather data
 .statusContainer {
     padding: 0 3rem 2.5rem ;
     background-color: rgb(243, 243, 243);
