--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,6 @@
-@import 'base/variables';
 @import 'base/settings';
 @import 'base/base';
 
+@import 'components/resorts';
 @import 'components/sections'; 
 @import 'components/weather';
