--- a/src/styles/components/_resorts.scss
+++ b/src/styles/components/_resorts.scss
@@ -24,13 +24,45 @@
 
     &__menu {
         margin: 0 auto;
-            overflow: auto;
+            
             height: 100%;
             width: 100%;   
+
+            @include respond(medium) {
+                overflow: auto;
+            }
     }
 
     &__dropButton {
         display: none;
+    }
+
+    &__resortList {
+        display: none;
+
+        @include respond(medium) {
+            display: block;
+        }
+    }
+
+    &__resortDropdown {
+        border: 1px solid $color-c;
+        border-radius: 4px;
+        box-shadow: 0px 1px 3px #333;
+        background: rgb(243, 243, 243);
+        margin: 0 auto;
+        padding: 1.5rem;
+        font-family: inherit;
+        display: block;
+        white-space: nowrap;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 2rem;
+        color: $color-a;
+
+        @include respond(medium) {
+            display: none;
+        }
     }
 
     .resort-icon {
