--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -9,6 +9,7 @@
     }
 
     &__title {
+        text-align: center;
         text-transform: uppercase;
         font-size: 5rem;
     }
@@ -16,37 +17,67 @@
 
 .titleContainer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     -webkit-text-stroke: 2px black;
+    margin: 0 auto;
+    width: 50rem;
+    line-height: 1;
+
+    @include respond(small) {
+        flex-direction: row;
+        width: 100%;
+    }
 }
 
 //Contains the app interface
 .container {
     max-width: 1300px;
     margin: 1rem auto;
-    height: 700px;
     box-shadow: 5px 5px 50px rgb(201, 201, 201);
     border: 2px solid #333;
     display: flex;
+    flex-direction: column;
+
+    @include respond(medium) {
+        flex-direction: row;
+        height: 700px;
+    }
 }
 
 //Resort list
 .resortContainer {
     background-color: $color-a;
     padding: 2.5rem;
-    flex: 1.3;
+
+    @include respond(medium) {
+        flex: 1.3;
         height: 100%;
         text-align: left;
+    }
 }
 
 //Weather data
 .statusContainer {
     padding: 0 3rem 2.5rem ;
     background-color: rgb(243, 243, 243);
-    width: 700px;
     height: 100%;
-    flex: 2;
+    text-align: center;
+
+    @include respond(medium) {
+        flex: 2;
+        display: flex;
+        align-items: center;
+    }
+
+    &__arrow {
+        display: none !important;
+
+        @include respond(medium) {
+            display: inline-block !important;
+        }
+    }
 }
 
 .footer {
