--- a/src/styles/components/_resorts.scss
+++ b/src/styles/components/_resorts.scss
@@ -59,6 +59,11 @@
         font-weight: bold;
         font-size: 2rem;
         color: $color-a;
+        width: 100%;
+        max-width: 750px;
+        @include respond(small) {
+            
+        }
 
         @include respond(medium) {
             display: none;
