--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -100,5 +100,10 @@
 .footer {
     text-align: center;
     font-size: 1rem;
+    margin-bottom: 1rem;
+
+    img {
+        width: 10rem;
+    }
 }
 
