--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -4,13 +4,16 @@
     
 
     &__icon {
-        margin-right: .7rem; 
         color: $color-a;
         font-size: 8vw;
+        text-shadow: 1px 1px 1px black;
+        margin-bottom: 1rem;
         
 
         @include respond(small) {
             font-size: 5rem;
+            margin-right: .7rem; 
+            margin-bottom: 0;
         }
 
         @include respond(medium) {
@@ -21,7 +24,6 @@
     &__title {
         text-align: center;
         font-size: 8vw;
-        
 
         @include respond(small) {
             font-size: 5rem;
@@ -38,12 +40,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    -webkit-text-stroke: 2px black;
-    margin: 0 auto;
+    margin: 0 auto 3rem;
     line-height: 1;
 
     @include respond(small) {
         flex-direction: row;
+        -webkit-text-stroke: 2px black;
+        margin: 0 auto 1rem;
         width: 100%;
     }
 }
@@ -54,6 +57,8 @@
     margin: 1rem auto;
     box-shadow: 5px 5px 50px rgb(201, 201, 201);
     border: 2px solid #333;
+    border-radius: 5px;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
 
@@ -84,16 +89,15 @@
 
     @include respond(medium) {
         flex: 2;
-        display: flex;
-        align-items: center;
     }
 
-    &__arrow {
-        display: none !important;
+    img {
+        margin-top: 3rem;
+    }
 
-        @include respond(medium) {
-            display: inline-block !important;
-        }
+    .landing {
+        margin: 2rem auto;
+        max-width: 60rem;
     }
 }
 
@@ -103,6 +107,7 @@
     margin-bottom: 1rem;
 
     img {
+        margin-top: -1.5rem;
         width: 10rem;
     }
 }
